[scss] Fix padding and letter spacing

--- a/app/assets/stylesheets/redesign/pages/_gratitude-page.scss
+++ b/app/assets/stylesheets/redesign/pages/_gratitude-page.scss
@@ -55,17 +55,9 @@
       width: 80%;
     }
 
-    .intro-wrapper {
-
-      .container-fluid {
-        padding-left: 85px;
-      }
-
-      .gratitudePage__copy {
-        padding-left: 25px;
-        padding-right: 70px;
-      }
-
+    .intro-wrapper .gratitudePage__copy {
+      padding-left: 55px;
+      padding-right: 55px;
     }
 
     .social-content-left {
